# rgwml

./: .gitignore  Cargo.toml  README.md  inject_python_scripts.sh
examples/: .example3.rs.swp  example1.rs  example2.rs  example3.rs  example4.rs  example5.rs
python_executables/: clustering_connect.py  dask_cleaner_connect.py  dask_differentiator_connect.py  dask_freq_cascading_connect.py  dask_freq_linear_connect.py  dask_grouper_connect.py  dask_inspect_connect.py  dask_intersector_connect.py  dask_joiner_connect.py  dask_pivoter_connect.py  dask_unique_value_stats_connect.py  db_connect.py  dc_connect.py  public_url_connect.py  xgb_connect.py
src/: ai_utils.rs  api_utils.rs  clustering_utils.rs  csv_utils.rs  dask_utils.rs  db_utils.rs  dc_utils.rs  df_utils.rs  heavy_csv_utils.rs  lib.rs  loop_utils.rs  public_url_utils.rs  python_utils.rs  xgb_utils.rs
test_file_samples/: file_example.h5  file_example_XLS_10.xls  file_example_XLS_10.xlsx  sales_data.csv
test_file_samples/cleaning_test_files/: people.csv
test_file_samples/clustering_test_files/: customers.csv
test_file_samples/grouping_test_files/: customers.csv
test_file_samples/h5_test_files/: sample.h5  sample_pandas.h5
test_file_samples/joining_test_files/: difference_file_a.csv  difference_file_b.csv  intersection_file_a.csv  intersection_file_b.csv  join_file_b.csv  union_file_b.csv
test_file_samples/pivoting_test_files/: employees.csv
test_file_samples/xgb_test_files/: xgb_binary_classification_training_sample.csv  xgb_binary_classification_training_sample_2.csv  xgb_regression_training_sample.csv
