[package]
name = "rgwml"
version = "1.1.28"
edition = "2021"
authors = ["Ryan Gerard Wilson"]
description = "A crate for reducing cognitive overload while using rust for ml, ai, and data science operations"
license = "MIT"
repository = "https://github.com/ryangerardwilson/rgwml"
documentation = "https://docs.rs/rgwml/latest/rgwml/"

[dependencies]
csv = "1.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.21" 
fuzzywuzzy = "0.0.2"
futures = "0.3"
chrono = "0.4.31"
regex = "1.10.2"

