[package]
name = "rgwml"
version = "1.1.67"
edition = "2021"
authors = ["Ryan Gerard Wilson"]
description = "A crate for reducing cognitive overload while using rust for ml, ai, and data science operations"
license = "MIT"
repository = "https://github.com/ryangerardwilson/rgwml"
documentation = "https://docs.rs/rgwml/latest/rgwml/"

[dependencies]
csv = "1.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.21" 
fuzzywuzzy = "0.0.2"
futures = "0.3"
chrono = "0.4.31"
regex = "1.10.2"
calamine = "0.23.1"
rand = "0.8.5"
tiberius = { version = "0.12.2", features = ["chrono"] }
tokio-util = { version = "0.7", features = ["compat"] }
uuid = "1.6.1"
mysql_async = "0.33.0"

