[package]
name = "rgwml"
version = "1.3.82"
edition = "2021"
authors = ["Ryan Gerard Wilson"]
description = "The ONLY 🤯 RUST-dominant AI, Data Science & Machine Learning RUST Library designed to minimize developer cognitive load, and replicate the Python Pandas Library with OpenAI, XGBoost, Clustering Techniques (KMEANS/ DBSCAN/ AGGLOMERATIVE/ MEAN_SHIFT/ GMM/ SPECTRAL/ BIRCH), MYSQL Server, MSSQL Server, Google Big Query, and Google Sheets integrations 🚀💪"
license = "MIT"
repository = "https://github.com/ryangerardwilson/rgwml"
documentation = "https://docs.rs/rgwml/latest/rgwml/"

[dependencies]
csv = "1.1"
reqwest = { version = "0.11", features = ["json", "multipart", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.21" 
fuzzywuzzy = "0.0.2"
futures = "0.3"
chrono = "0.4.31"
regex = "1.10.2"
calamine = "0.25.0"
rand = "0.8.5"
tiberius = { version = "0.12.2", features = ["chrono"] }
tokio-util = { version = "0.7", features = ["compat"] }
uuid = { version = "1.6.1", features = ["v4"] }
mysql_async = "0.34.1"
smartcore = "0.3.2"
rayon = "1.10.0"
tempfile = "3.10.1"
anyhow = "1.0.82"
dirs = "5.0.1"
lazy_static = "1.4.0"
ctor = "0.2.8"
hdf5 = "0.8.1"
ndarray = "0.15.6"
url = "2.5.0"
async-trait = "0.1.80"
memmap = "0.7.0"

[lib]
doctest = false

